# new_admin_panel_sprint_3

./: Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
etl/: .dockerignore  .env.example  Dockerfile  config.yaml  configs.py  dataclass.py  index.json  logger_config.py  main.py
etl/extractors/: extractor.py  sql.py
etl/loaders/: index.json  loader.py
etl/pg_dump/: 01-restore.sh  dump.pgdata  movies_database.ddl
etl/transformers/: transformer.py
etl/utils/: backoff.py  etl_state.py  init_dataclass.py
postgres_to_es/: .env.example  config.yaml  configs.py  dataclass.py  logger_config.py  main.py
postgres_to_es/extractors/: extractor.py
postgres_to_es/loaders/: index.json
postgres_to_es/pg_dump/: inserts.sql
postgres_to_es/transformers/: transformer.py
postgres_to_es/utils/: etl_state.py  parser.py
